# xlsF2schema

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  readme.md  requirements.txt
src/xlsF2schema/: cli.py  core.py  mapping.py
tests/: manual_test.py  test_conversion.py
tests/samples/: Household.xlsx  PUBLISHED.xlsx  test_odk.xlsx
